--- a/005表格/resume.html
+++ b/005表格/resume.html
@@ -5,15 +5,11 @@
 		<title></title>
 	</head>
 	<body>
-		<table border="1" cellspacing="0" cellpadding="">
-			<tr><th colspan="7">Resume</th></tr>
-			<col width="100">
-			<col width="100">
-			<col width="100">
-			<col width="100">
-			<col width="100">
-			<col width="100">
-			<col width="100">
+		<table border="1" cellspacing="0" cellpadding="" align="center">
+			<colgroup span="6" width="100px">
+			<colgroup span="1" width="200">
+			<!--colgroup 不能和col混用 -->
+			<tr><th colspan="7">个人简历</th></tr>
 			<tr align="center">
 				<td>姓名</td>
 				<td></td>
