--- a/AppleHome/index.html
+++ b/AppleHome/index.html
@@ -3,8 +3,30 @@
 	<head>
 		<meta charset="utf-8">
 		<title>iPhone - Apple</title>
+		<style>
+			#navigation{
+				text-align: center;
+				background-color:black;
+			}
+			#navigation .last{
+				border:none;
+			}
+			.item{
+				text-decoration: none;
+				color: #cecece;
+				border-right: solid 1px aliceblue;
+				padding: 20px;
+			}
+		</style>
 	</head>
 	<body>
-		<nav background-color="#0a0a0a">MAC</nav>
+		<div id="navigation">
+			<a href="#" class="item">Mac</a>
+			<a href="#" class="item">iPad</a>
+			<a href="#" class="item">iPhone</a>
+			<a href="#" class="item">iWatch</a>
+			<a href="#" class="item">TV</a>
+			<a href="#" class="item last">Music</a>
+		</div>
 	</body>
 </html>
