--- a/AppleHome/index.html
+++ b/AppleHome/index.html
@@ -4,6 +4,9 @@
 		<meta charset="utf-8">
 		<title>iPhone - Apple</title>
 		<style>
+			* {
+				margin:0;
+			}
 			#navigation{
 				text-align: center;
 				background-color:black;
