--- a/JavaScript/rollingBanner/index.html
+++ b/JavaScript/rollingBanner/index.html
@@ -89,10 +89,10 @@
             <input type="button" id="button3" value="确定">
             <div id="div1">
             <ul id="ul1">
-                <li><img src="Banner1.jpg" alt=""></li>
-                <li><img src="Banner2.jpg" alt=""></li>
-                <li><img src="Banner3.jpg" alt=""></li>
-                <li><img src="Banner4.jpg" alt=""></li>
+                <li><img src="1.jpg" alt=""></li>
+                <li><img src="2.jpg" alt=""></li>
+                <li><img src="3.jpg" alt=""></li>
+                <li><img src="4.jpg" alt=""></li>
             </ul>
             </div>
             
