--- a/JavaScript/rollingBanner/index.html
+++ b/JavaScript/rollingBanner/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <title>无缝滚动Banner</title>
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <link rel="stylesheet" href="index.css">
         <script>
