--- a/JavaScript/Domlist/index.html
+++ b/JavaScript/Domlist/index.html
@@ -6,52 +6,70 @@
   </head>
 
   <body>
-    <div id="RetrieveColumn">
-    用户名
-      <input type="text" name="" id="serchText" />
-      <input type="button" name="" id="serchButon" value="检索" />
+    <div id="body">
+      <div id="RetrieveColumn">
+        用户名
+        <input type="text" name="" id="serchText" value="张三" />
+        <input type="button" name="" id="serchBtn" value="检索" />
+        <input type="button" name="" id="create" value="新建" />
+      </div>
+  
+      <table id="tab" border="1" cellspacing="0" ;>
+        <thead>
+          <td>id</td>
+          <td>用户名</td>
+          <td>创建人</td>
+          <td>创建时间</td>
+          <td>操作</td>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td>张三</td>
+            <td>admin</td>
+            <td>2020-9-21 23:35:04</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>李四</td>
+            <td>admin</td>
+            <td>2020-9-22 23:35:04</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>王五</td>
+            <td>admin</td>
+            <td>2020-9-23 23:35:04</td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>赵柳</td>
+            <td>admin</td>
+            <td>2020-9-25 23:35:04</td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>钱八</td>
+            <td>admin</td>
+            <td>2020-9-10 23:35:04</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
+    
 
-    <table id="tab" border="1" cellspacing="0" ;>
-      <thead>
-        <td>id</td>
-        <td>用户名</td>
-        <td>创建人</td>
-        <td>创建时间</td>
-        <td>操作</td>
-      </thead>
-      <tbody>
-        <tr>
-          <td>1</td>
-          <td>张三</td>
-          <td>admin</td>
-          <td>2020-9-21 23:35:04</td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td>李四</td>
-          <td>admin</td>
-          <td>2020-9-22 23:35:04</td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>王五</td>
-          <td>admin</td>
-          <td>2020-9-23 23:35:04</td>
-        </tr>
-        <tr>
-          <td>4</td>
-          <td>赵柳</td>
-          <td>admin</td>
-          <td>2020-9-25 23:35:04</td>
-        </tr>
-        <tr>
-          <td>5</td>
-          <td>钱八</td>
-          <td>admin</td>
-          <td>2020-9-10 23:35:04</td>
-        </tr>
-      </tbody>
-    </table>
+    <div id="newContainer-background">
+      <div id="newContainer">
+        <p id="newContainerTitle">新增用户</p>
+        <ul>
+          <li>用户名<input type="text" id="userName" /></li>
+          <li>创建人<input type="text" name="" id="creator" /></li>
+          <div id="buttonContainer">
+            <button type="submit" id="back">返回</button>
+            <button type="submit" id="newSubmit">确定</button>
+          </div>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
