--- a/JavaScript/Domlist/index.html
+++ b/JavaScript/Domlist/index.html
@@ -62,11 +62,13 @@
       <div id="newContainer">
         <p id="newContainerTitle">新增用户</p>
         <ul>
+          <li id="idli">id:<input type="text" id="id" readOnly='readonly'></li>
           <li>用户名<input type="text" id="userName" /></li>
           <li>创建人<input type="text" name="" id="creator" /></li>
           <div id="buttonContainer">
             <button type="submit" id="back">返回</button>
             <button type="submit" id="newSubmit">确定</button>
+            <button type="submit" id="save" >确定</button>
           </div>
         </ul>
       </div>
