--- a/JavaScript/tableSort/index.html
+++ b/JavaScript/tableSort/index.html
@@ -8,10 +8,10 @@
   <body>
     <table id="tab"  cellspacing=0 >
       <thead id="thead">
-        <td><a href="javascript:void(0);" onclick="aSort1(0)">id</a></td>
-        <td><a href="javascript:void(0);" onclick="aSort2()">名称</a></td>
-        <td><a href="javascript:void(0);" onclick="aSort1(2)">血量</a></td>
-        <td><a href="javascript:void(0);" onclick="aSort1(3)">伤害</a></td>
+        <td><a href="javascript:void(0);" onclick="numberSort(0)">id</a></td>
+        <td><a href="javascript:void(0);" onclick="AlphSort()">名称</a></td>
+        <td><a href="javascript:void(0);" onclick="numberSort(2)">血量</a></td>
+        <td><a href="javascript:void(0);" onclick="numberSort(3)">伤害</a></td>
       </thead>
       <tbody>
         <tr>
