--- a/JavaScript/register/index.html
+++ b/JavaScript/register/index.html
@@ -45,7 +45,7 @@
         <div id="warnings">
           <p class="warning" id="warning-mobile">手机号输入有误</p>
           <p class="warning" id="warning-psw8">请设置8位以上的密码</p>
-          <p class="warning" id="warning-psw8A">密码需要字母数字组合</p>
+          <p class="warning" id="warning-psw8A">密码需要大小写字母数字组合</p>
           <p class="warning" id="warning-code">验证码错误</p>
         </div>
         <button id="submit">注册</button>
