--- a/JavaScript/register/index.html
+++ b/JavaScript/register/index.html
@@ -28,10 +28,11 @@
               />
             </td>
           </tr>
-          <tr>
+          <tr id="pswtr">
             <td>密&nbsp&nbsp&nbsp码</td>
             <td>
               <input type="password" id="psw" placeholder="请设置登录密码" />
+              <img src="img/eyeClose.png" id="hideOrShow"></img>
             </td>
           </tr>
           <tr>
