--- a/JavaScript/Movement/多属性变化/index.html
+++ b/JavaScript/Movement/多属性变化/index.html
@@ -4,20 +4,27 @@
     <link rel="stylesheet" href="index.css" />
     <script>
       window.onload = function () {
-        var oWidth = document.getElementById('width')
-        oWidth.onmouseover = function(){
-            move(oWidth,'width',500)
-        }
-
+        var oWidth = document.getElementById("width");
+        oWidth.onmouseover = function () {
+          move(oWidth, "width", 500);
+        };
       };
+      //获取元素的指定属性
+      function getStyle(obj, name) {
+        if (obj.currentStyle) {
+          return obj.currentStyle[name];
+        } else {
+          return getComputedStyle(obj,false)[name];
+        }
+      }
 
       //属性值变化方法 works for width,height,left,top,opacity
       function move(obj, attr, target) {
-        var Attr = obj.getAttributeNode(attr);
+        var Attr = getStyle(obj,attr)
         var speed = 0;
         obj.alpha = 30;
 
-        console.log(Attr)
+        console.log(obj.getAttributeNode(attr));
 
         clearInterval(obj.timer);
         obj.timer = setInterval(() => {
@@ -25,21 +32,21 @@
           speed = speed > 0 ? Math.ceil(speed) : Math.floor(speed);
           if (Attr == target) {
             clearInterval(obj.timer);
-          } else if(attr.value == 'opacity'){
+          } else if (attr.value == "opacity") {
             obj.alpha += speed;
-            obj.style.opacity = obj.alpha/100;
-          }
-          else{
-            Attr.value = Attr.value + speed + 'px' 
+            obj.style.opacity = obj.alpha / 100;
+          } else {
+            Attr.value = Attr.value + speed + "px";
           }
         }, 30);
       }
     </script>
+
     <title>多属性变化</title>
   </head>
 
   <body>
-    <div id="width" >变宽</div>
+    <div id="width">变宽</div>
     <div id="height">变高</div>
   </body>
 </html>
