--- a/JavaScript/Movement/匀速运动的停止/index.html
+++ b/JavaScript/Movement/匀速运动的停止/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <link rel="stylesheet" href="index.css">
-        <script text="javascript" src="index.js"></script>
+        <script src="index.js"></script>
     </head>
 
     <body>
